<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chatengine.Activities.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:visibility="invisible"
            android:indeterminateTint="@color/colorPrimary"
            />

        <TextView
            android:id="@+id/loginscrn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:background="@drawable/add_a_photo"
            android:id="@+id/userProfilePic"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/NameField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RtxtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/EmailField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RtxtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:id="@+id/PassField"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/RtxtPwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegistor"
            android:text="@string/update"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"/>


        <TextView android:id="@+id/lnkLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/already_registered_login_here"
            android:layout_gravity="center|bottom"
            android:textSize="20sp"
            android:textColor="@color/black" />

    </LinearLayout>


</RelativeLayout>