<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/usertxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailtxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:hint="@string/email"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/black" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/cancel"
            android:layout_marginHorizontal="20dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/updated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="72dp"
            android:text="@string/update"
            android:layout_marginTop="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="20dp"/>

    </LinearLayout>



</LinearLayout>