<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.About">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/firstsec"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:gravity="bottom"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:text="@string/developed_by"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="bottom"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            android:text="@string/poojan_prajapati"
            android:textStyle="italic"
            android:textColor="@color/black"
            android:textSize="20sp" />

    </LinearLayout>



    <View
        android:id="@+id/view"
        android:layout_width="350dp"
        android:layout_height="0.8dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout1" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:layout_constraintVertical_bias="0.015">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/aboutmetxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <TextView
                android:id="@+id/aboutme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hello"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <TextView
                android:id="@+id/aboutmeapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>

            <TextView
                android:id="@+id/aboutapp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hello"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:layout_marginTop="10dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"/>


        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal">

        <View
            android:id="@+id/view1"
            android:layout_width="350dp"
            android:layout_height="0.8dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Let's connect"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="1.0">


            <ImageView
                android:id="@+id/github"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/github" />

            <ImageView
                android:id="@+id/linkedin"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/linkedin" />

            <ImageView
                android:id="@+id/instagram"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/instagram" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>